# article-tagging

./: .gitignore  .pylintrc  .travis.yml  CODEOWNERS  CONTRIBUTING.md  GEOTAGGING_CONTRIB.md  INSTALLATION.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
cjp-db/: README.md
data/: column_names.txt
lib/load_data_utils/: utils.py
lib/newstag/: __init__.py
lib/newstag/crimetype/: benchmark.py  cli.py  tag.py
lib/newstag/tests/: test_binary_stemmed.py
lib/newstag/utils/: __init__.py  load_data.py
lib/notebooks/: bag-of-words-count-stemmed-binary.ipynb  explorations.ipynb  extract-geostring-example.ipynb  extract-geostring-rnn.ipynb  geo-string-result-explorations.ipynb  geocode-locations.ipynb  geocode.ipynb  geotag.ipynb  keras-glove-testing-api-example.ipynb  keras-glove-with-street-names-better.ipynb  lat_long.py  link-to-crime-table.ipynb  mapper.py  read_subset_data.ipynb  read_subsetdata-domv_sexa_2019.ipynb  senteval_budgeting.ipynb  test-tag-110.txt  test-tag-11713.txt  test-tag-128395.txt  test-tag-155389.txt  test-tag-212250.txt  test-tag-260065.txt  test-tag-286691.txt  test-tag-345918.txt  test-tag-72394.txt  test-tag-91387.txt  testing-google-geocoder-api.ipynb
lib/notebooks/requirements/: geotag-osx.yml
lib/tagnews/: __init__.py
lib/tagnews/crimetype/: __init__.py  benchmark.py  cli.py  tag.py
lib/tagnews/data/: .gitignore  Chicago_Street_Names.csv  chicago_neighborhoods.csv  column_names.txt
lib/tagnews/geoloc/: __init__.py  geocode_list.py  tag.py
lib/tagnews/senteval/: __init__.py  eval.py  police_words.py
lib/tagnews/tests/: test_binary_stemmed.py  test_crimetype_tag.py  test_geocoder.py  test_load_data.py
lib/tagnews/utils/: utils.py  (+8 more)
r_models/: algorith_summaries_031117.csv  ensemble_summaries_031107.csv  ensemble_summaries_more_detail_031117_cleaned.csv  model_performance_measures_031107_cleaned.csv  qj_models_explore.R  quant_justice_models.R
src/: bag-of-words-binary.ipynb  bag-of-words-count-stemmed-binary.ipynb  bag-of-words-count-stemmed.ipynb  bag-of-words-count.ipynb  bag-of-words.ipynb  benchmark_tagging.py  evaluate_framework.py  explorations.ipynb  load_data.py  n-gram-chars.ipynb  rnn.py  tag_article.py  tf-idf.ipynb  tf-no-idf.ipynb  word2vec.py  word2vec_basic.py  word2vec_example.ipynb  word2vec_example.py.ipynb  word2vec_model.ipynb
src/notebooks/: bag-of-words-count-rf.ipynb  bag-of-words-count-stemmed-binary.ipynb  bag-of-words-count-stemmed.ipynb  explorations.ipynb  n-gram-words.ipynb  tf-no-idf.ipynb
(+16 files in other folders)
